// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders <Button /> correctly Renders a Primary <Button /> 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableHighlight
    activeOpacity={1}
    align="left"
    delayPressOut={100}
    disabled={false}
    size="medium"
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(11, 112, 231, 0.87)",
          "borderRadius": 2,
          "flexDirection": "row",
          "paddingBottom": 8,
          "paddingLeft": 24,
          "paddingRight": 24,
          "paddingTop": 8,
        },
      ]
    }
    testID="ds-button"
    text="Click Me"
    underlayColor="rgba(11, 112, 231, 1.0)"
    variant="primary"
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={20}
      bbWidth={20}
      fill="rgba(255, 255, 255, 1.0)"
      focusable={false}
      height={20}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          undefined,
          Object {
            "opacity": 1,
          },
          Object {
            "flex": 0,
            "height": 20,
            "width": 20,
          },
        ]
      }
      testID="ds-icon"
      vbHeight={24}
      vbWidth={24}
      width={20}
    >
      <RNSVGGroup
        fill={4294967295}
        fillOpacity={1}
        fillRule={1}
        font={Object {}}
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        originX={0}
        originY={0}
        propList={
          Array [
            "fill",
          ]
        }
        rotation={0}
        scaleX={1}
        scaleY={1}
        skewX={0}
        skewY={0}
        stroke={null}
        strokeDasharray={null}
        strokeDashoffset={null}
        strokeLinecap={0}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth={1}
        vectorEffect={0}
        x={0}
        y={0}
      >
        <RNSVGPath
          d="M11 9h2V7h-2m1 13c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-18A10 10 0 002 12a10 10 0 0010 10 10 10 0 0010-10A10 10 0 0012 2m-1 15h2v-6h-2v6z"
          fill={4278190080}
          fillOpacity={1}
          fillRule={1}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={Array []}
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
          vectorEffect={0}
          x={0}
          y={0}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <View
      className="sc-AykKC jxOWPs"
      testID="space-default-view"
    />
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      align="center"
      color="background.100"
      size="medium"
      style={
        Array [
          Object {
            "alignSelf": "center",
            "color": "rgba(255, 255, 255, 1.0)",
            "fontFamily": "Lato-Bold",
            "fontSize": 14,
            "letterSpacing": 0,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      Click Me
    </Text>
  </TouchableHighlight>
</View>
`;

exports[`Renders <Button /> correctly Renders a Primary <Button /> with left icon 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableHighlight
    activeOpacity={1}
    align="left"
    delayPressOut={100}
    disabled={false}
    size="medium"
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(11, 112, 231, 0.87)",
          "borderRadius": 2,
          "flexDirection": "row",
          "paddingBottom": 8,
          "paddingLeft": 24,
          "paddingRight": 24,
          "paddingTop": 8,
        },
      ]
    }
    testID="ds-button"
    text="Click Me"
    underlayColor="rgba(11, 112, 231, 1.0)"
    variant="primary"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      align="center"
      color="background.100"
      size="medium"
      style={
        Array [
          Object {
            "alignSelf": "center",
            "color": "rgba(255, 255, 255, 1.0)",
            "fontFamily": "Lato-Bold",
            "fontSize": 14,
            "letterSpacing": 0,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      Click Me
    </Text>
  </TouchableHighlight>
</View>
`;

exports[`Renders <Button /> correctly Renders a Secondary <Button /> 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableHighlight
    activeOpacity={1}
    align="left"
    delayPressOut={100}
    disabled={false}
    size="medium"
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(11, 112, 231, 0.87)",
          "borderRadius": 2,
          "flexDirection": "row",
          "paddingBottom": 8,
          "paddingLeft": 24,
          "paddingRight": 24,
          "paddingTop": 8,
        },
      ]
    }
    testID="ds-button"
    text="Click Me"
    underlayColor="rgba(11, 112, 231, 1.0)"
    variant="primary"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      align="center"
      color="background.100"
      size="medium"
      style={
        Array [
          Object {
            "alignSelf": "center",
            "color": "rgba(255, 255, 255, 1.0)",
            "fontFamily": "Lato-Bold",
            "fontSize": 14,
            "letterSpacing": 0,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      Click Me
    </Text>
  </TouchableHighlight>
</View>
`;

exports[`Renders <Button /> correctly Renders a Tertiary <Button /> 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableHighlight
    activeOpacity={1}
    align="left"
    delayPressOut={100}
    disabled={false}
    size="medium"
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(11, 112, 231, 0.87)",
          "borderRadius": 2,
          "flexDirection": "row",
          "paddingBottom": 8,
          "paddingLeft": 24,
          "paddingRight": 24,
          "paddingTop": 8,
        },
      ]
    }
    testID="ds-button"
    text="Click Me"
    underlayColor="rgba(11, 112, 231, 1.0)"
    variant="primary"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      align="center"
      color="background.100"
      size="medium"
      style={
        Array [
          Object {
            "alignSelf": "center",
            "color": "rgba(255, 255, 255, 1.0)",
            "fontFamily": "Lato-Bold",
            "fontSize": 14,
            "letterSpacing": 0,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      Click Me
    </Text>
  </TouchableHighlight>
</View>
`;

exports[`Renders <Button /> correctly Renders a disabled Primary <Button /> 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableHighlight
    activeOpacity={1}
    align="left"
    delayPressOut={100}
    disabled={true}
    size="medium"
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(11, 112, 231, 0.05)",
          "borderRadius": 2,
          "flexDirection": "row",
          "paddingBottom": 8,
          "paddingLeft": 24,
          "paddingRight": 24,
          "paddingTop": 8,
        },
      ]
    }
    testID="ds-button"
    text="Click Me"
    underlayColor="rgba(11, 112, 231, 1.0)"
    variant="primary"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      align="center"
      color="background.200"
      size="medium"
      style={
        Array [
          Object {
            "alignSelf": "center",
            "color": "rgba(255, 255, 255, 1.0)",
            "fontFamily": "Lato-Bold",
            "fontSize": 14,
            "letterSpacing": 0,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      Click Me
    </Text>
  </TouchableHighlight>
</View>
`;

exports[`Renders <Button /> correctly Renders a disabled Secondary <Button /> 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableHighlight
    activeOpacity={1}
    align="left"
    delayPressOut={100}
    disabled={true}
    size="medium"
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(11, 112, 231, 0.05)",
          "borderRadius": 2,
          "flexDirection": "row",
          "paddingBottom": 8,
          "paddingLeft": 24,
          "paddingRight": 24,
          "paddingTop": 8,
        },
      ]
    }
    testID="ds-button"
    text="Click Me"
    underlayColor="rgba(11, 112, 231, 1.0)"
    variant="primary"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      align="center"
      color="background.200"
      size="medium"
      style={
        Array [
          Object {
            "alignSelf": "center",
            "color": "rgba(255, 255, 255, 1.0)",
            "fontFamily": "Lato-Bold",
            "fontSize": 14,
            "letterSpacing": 0,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      Click Me
    </Text>
  </TouchableHighlight>
</View>
`;

exports[`Renders <Button /> correctly Renders a disabled Tertiary <Button /> 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableHighlight
    activeOpacity={1}
    align="left"
    delayPressOut={100}
    disabled={true}
    size="medium"
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(11, 112, 231, 0.05)",
          "borderRadius": 2,
          "flexDirection": "row",
          "paddingBottom": 8,
          "paddingLeft": 24,
          "paddingRight": 24,
          "paddingTop": 8,
        },
      ]
    }
    testID="ds-button"
    text="Click Me"
    underlayColor="rgba(11, 112, 231, 1.0)"
    variant="primary"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      align="center"
      color="background.200"
      size="medium"
      style={
        Array [
          Object {
            "alignSelf": "center",
            "color": "rgba(255, 255, 255, 1.0)",
            "fontFamily": "Lato-Bold",
            "fontSize": 14,
            "letterSpacing": 0,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      Click Me
    </Text>
  </TouchableHighlight>
</View>
`;

exports[`Renders <Button /> correctly Renders a large Primary <Button /> 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableHighlight
    activeOpacity={1}
    align="left"
    delayPressOut={100}
    disabled={false}
    size="large"
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(11, 112, 231, 0.87)",
          "borderRadius": 2,
          "flexDirection": "row",
          "paddingBottom": 10,
          "paddingLeft": 24,
          "paddingRight": 24,
          "paddingTop": 10,
        },
      ]
    }
    testID="ds-button"
    text="Click Me"
    underlayColor="rgba(11, 112, 231, 1.0)"
    variant="primary"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      align="center"
      color="background.100"
      size="medium"
      style={
        Array [
          Object {
            "alignSelf": "center",
            "color": "rgba(255, 255, 255, 1.0)",
            "fontFamily": "Lato-Bold",
            "fontSize": 14,
            "letterSpacing": 0,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      Click Me
    </Text>
  </TouchableHighlight>
</View>
`;

exports[`Renders <Button /> correctly Renders a large Primary <Button /> with right icon 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableHighlight
    activeOpacity={1}
    align="left"
    delayPressOut={100}
    disabled={false}
    size="large"
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(11, 112, 231, 0.87)",
          "borderRadius": 2,
          "flexDirection": "row",
          "paddingBottom": 10,
          "paddingLeft": 24,
          "paddingRight": 24,
          "paddingTop": 10,
        },
      ]
    }
    testID="ds-button"
    text="Click Me"
    underlayColor="rgba(11, 112, 231, 1.0)"
    variant="primary"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      align="center"
      color="background.100"
      size="medium"
      style={
        Array [
          Object {
            "alignSelf": "center",
            "color": "rgba(255, 255, 255, 1.0)",
            "fontFamily": "Lato-Bold",
            "fontSize": 14,
            "letterSpacing": 0,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      Click Me
    </Text>
    <View
      className="sc-AykKC jxOWPs"
      testID="space-default-view"
    />
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={20}
      bbWidth={20}
      fill="rgba(255, 255, 255, 1.0)"
      focusable={false}
      height={20}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          undefined,
          Object {
            "opacity": 1,
          },
          Object {
            "flex": 0,
            "height": 20,
            "width": 20,
          },
        ]
      }
      testID="ds-icon"
      vbHeight={24}
      vbWidth={24}
      width={20}
    >
      <RNSVGGroup
        fill={4294967295}
        fillOpacity={1}
        fillRule={1}
        font={Object {}}
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        originX={0}
        originY={0}
        propList={
          Array [
            "fill",
          ]
        }
        rotation={0}
        scaleX={1}
        scaleY={1}
        skewX={0}
        skewY={0}
        stroke={null}
        strokeDasharray={null}
        strokeDashoffset={null}
        strokeLinecap={0}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth={1}
        vectorEffect={0}
        x={0}
        y={0}
      >
        <RNSVGPath
          d="M11 9h2V7h-2m1 13c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-18A10 10 0 002 12a10 10 0 0010 10 10 10 0 0010-10A10 10 0 0012 2m-1 15h2v-6h-2v6z"
          fill={4278190080}
          fillOpacity={1}
          fillRule={1}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={Array []}
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
          vectorEffect={0}
          x={0}
          y={0}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </TouchableHighlight>
</View>
`;

exports[`Renders <Button /> correctly Renders a large Secondary <Button /> 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableHighlight
    activeOpacity={1}
    align="left"
    delayPressOut={100}
    disabled={false}
    size="large"
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(11, 112, 231, 0.87)",
          "borderRadius": 2,
          "flexDirection": "row",
          "paddingBottom": 10,
          "paddingLeft": 24,
          "paddingRight": 24,
          "paddingTop": 10,
        },
      ]
    }
    testID="ds-button"
    text="Click Me"
    underlayColor="rgba(11, 112, 231, 1.0)"
    variant="primary"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      align="center"
      color="background.100"
      size="medium"
      style={
        Array [
          Object {
            "alignSelf": "center",
            "color": "rgba(255, 255, 255, 1.0)",
            "fontFamily": "Lato-Bold",
            "fontSize": 14,
            "letterSpacing": 0,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      Click Me
    </Text>
  </TouchableHighlight>
</View>
`;

exports[`Renders <Button /> correctly Renders a large Tertiary <Button /> correctly 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableHighlight
    activeOpacity={1}
    align="left"
    delayPressOut={100}
    disabled={false}
    size="large"
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(11, 112, 231, 0.87)",
          "borderRadius": 2,
          "flexDirection": "row",
          "paddingBottom": 10,
          "paddingLeft": 24,
          "paddingRight": 24,
          "paddingTop": 10,
        },
      ]
    }
    testID="ds-button"
    text="Click Me"
    underlayColor="rgba(11, 112, 231, 1.0)"
    variant="primary"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      align="center"
      color="background.100"
      size="medium"
      style={
        Array [
          Object {
            "alignSelf": "center",
            "color": "rgba(255, 255, 255, 1.0)",
            "fontFamily": "Lato-Bold",
            "fontSize": 14,
            "letterSpacing": 0,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      Click Me
    </Text>
  </TouchableHighlight>
</View>
`;

exports[`Renders <Button /> correctly Renders a small Primary <Button /> 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableHighlight
    activeOpacity={1}
    align="left"
    delayPressOut={100}
    disabled={false}
    size="small"
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(11, 112, 231, 0.87)",
          "borderRadius": 2,
          "flexDirection": "row",
          "paddingBottom": 5,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 5,
        },
      ]
    }
    testID="ds-button"
    text="Click Me"
    underlayColor="rgba(11, 112, 231, 1.0)"
    variant="primary"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      align="center"
      color="background.100"
      size="xsmall"
      style={
        Array [
          Object {
            "alignSelf": "center",
            "color": "rgba(255, 255, 255, 1.0)",
            "fontFamily": "Lato-Bold",
            "fontSize": 12,
            "letterSpacing": 0,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      Click Me
    </Text>
  </TouchableHighlight>
</View>
`;

exports[`Renders <Button /> correctly Renders a small Secondary <Button /> 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableHighlight
    activeOpacity={1}
    align="left"
    delayPressOut={100}
    disabled={false}
    size="small"
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(11, 112, 231, 0.87)",
          "borderRadius": 2,
          "flexDirection": "row",
          "paddingBottom": 5,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 5,
        },
      ]
    }
    testID="ds-button"
    text="Click Me"
    underlayColor="rgba(11, 112, 231, 1.0)"
    variant="primary"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      align="center"
      color="background.100"
      size="xsmall"
      style={
        Array [
          Object {
            "alignSelf": "center",
            "color": "rgba(255, 255, 255, 1.0)",
            "fontFamily": "Lato-Bold",
            "fontSize": 12,
            "letterSpacing": 0,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      Click Me
    </Text>
  </TouchableHighlight>
</View>
`;

exports[`Renders <Button /> correctly Renders a small Tertiary <Button /> 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableHighlight
    activeOpacity={1}
    align="left"
    delayPressOut={100}
    disabled={false}
    size="small"
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(11, 112, 231, 0.87)",
          "borderRadius": 2,
          "flexDirection": "row",
          "paddingBottom": 5,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 5,
        },
      ]
    }
    testID="ds-button"
    text="Click Me"
    underlayColor="rgba(11, 112, 231, 1.0)"
    variant="primary"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      align="center"
      color="background.100"
      size="xsmall"
      style={
        Array [
          Object {
            "alignSelf": "center",
            "color": "rgba(255, 255, 255, 1.0)",
            "fontFamily": "Lato-Bold",
            "fontSize": 12,
            "letterSpacing": 0,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      Click Me
    </Text>
  </TouchableHighlight>
</View>
`;
